Added subgroups icon

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
       </header>
 
       <div class="project-container">
-        <p class="view-projects">Project</p>
+        <p class="view-projects">&vrtri; Project</p>
         <p id="add-project">&plus;</p>
 
         <dialog>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="task-container">
-        <p class="view-tasks">Task</p>
+        <p class="view-tasks">&vrtri; Task</p>
         <p class="add-task">&plus;</p>
         <dialog></dialog>
       </div>
