Converted classes to ids

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
       </header>
 
       <div class="project-container">
-        <p class="view-projects">&vrtri; Project</p>
+        <p id="view-projects">&vrtri; Project</p>
         <p id="add-project">&plus;</p>
 
         <dialog>
@@ -32,8 +32,8 @@
       </div>
 
       <div class="task-container">
-        <p class="view-tasks">&vrtri; Task</p>
-        <p class="add-task">&plus;</p>
+        <p id="view-tasks">&vrtri; Task</p>
+        <p id="add-task">&plus;</p>
 
         <dialog>
           <form action="#">
