Added name and id to date input

--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,13 @@
           <form action="#">
             <h3>Create a new project</h3>
             <label for="name"
-              >Name: <input type="text" name="name" id="name" placeholder="Project name" autofocus
+              >Name:
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Project name"
+                autofocus
             /></label>
 
             <div>
@@ -39,7 +45,14 @@
           <form action="#">
             <h3>Create a new task</h3>
             <label for="title">
-              Title: <input type="text" name="title" id="title" placeholder="Task name" autofocus />
+              Title:
+              <input
+                type="text"
+                name="title"
+                id="title"
+                placeholder="Task name"
+                autofocus
+              />
             </label>
             <label for="description"
               >Description:
@@ -51,7 +64,9 @@
                 placeholder="Write description"
               ></textarea>
             </label>
-            <label for="due-date">Due Date: <input type="date" /></label>
+            <label for="due-date"
+              >Due Date: <input type="date" name="due-date" id="due-date"
+            /></label>
 
             <div>
               <p>Priority:</p>
