Added value to the radio buttons

--- a/src/template.html
+++ b/src/template.html
@@ -71,13 +71,21 @@
             <div>
               <p>Priority:</p>
               <label for="high"
-                ><input type="radio" name="priority" id="high" /> High</label
+                ><input type="radio" name="priority" id="high" value="High" />
+                High</label
               >
               <label for="medium"
-                ><input type="radio" name="priority" id="medium" /> Medium
+                ><input
+                  type="radio"
+                  name="priority"
+                  id="medium"
+                  value="Medium"
+                />
+                Medium
               </label>
               <label for="low"
-                ><input type="radio" name="priority" id="low" /> Low</label
+                ><input type="radio" name="priority" id="low" value="Low" />
+                Low</label
               >
             </div>
 
