--- a/src/template.html
+++ b/src/template.html
@@ -67,6 +67,10 @@
             <label for="due-date"
               >Due Date: <input type="date" name="due-date" id="due-date"
             /></label>
+            <label for="select-project"
+              >Project:
+              <select name="select-project" id="select-project"></select>
+            </label>
 
             <div>
               <p>Priority:</p>
