Changed text for select tag

--- a/src/template.html
+++ b/src/template.html
@@ -68,7 +68,7 @@
               >Due Date: <input type="date" name="due-date" id="due-date"
             /></label>
             <label for="select-project"
-              >Project:
+              >Select:
               <select name="select-project" id="select-project"></select>
             </label>
 
